changes made to IOD folder

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <p id="content"></p>
     <script>
       alert("Hello from JavaScript!");
+      console.log("This is a message")
+      console.info("This is info")
+      console.warn("This is a warning")
+      console.error("This is an error")
     </script>
   </body>
 </html>
